--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Albano Tech - Assistência técnica em Rio do Campo/SC. Formatação, limpeza e upgrade (SSD/RAM). Atendimento rápido via WhatsApp." />
+  <script src="https://kit.fontawesome.com/7cd5b377e4.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
   <title>Albano Tech | Assistência Técnica</title>
 
@@ -45,7 +46,7 @@
         <h1>Assistência técnica rápida e confiável</h1>
 
         <p class="subtitle">
-          Formatação, limpeza e upgrade (SSD/RAM). Atendimento direto no WhatsApp.
+          Formatação, limpeza e upgrade. Atendimento direto no WhatsApp.
         </p>
 
         <div class="hero__cta">
@@ -73,26 +74,32 @@
 
       <div class="grid">
         <article class="service service--featured">
-            <div class="service__icon" aria-hidden="true">🧩</div>
+            <div class="service__icon">
+                <i class="fa-solid fa-align-center"></i>
+            </div>
             <h3>Formatação completa</h3>
             <p>Instalação do Windows + drivers + otimizações. Backup quando possível.</p>
             <span class="service__tag">Mais solicitado</span>
         </article>
 
         <article class="service">
-            <div class="service__icon" aria-hidden="true">🧼</div>
+            <div class="service__icon">
+                <i class="fa-solid fa-broom"></i>
+            </div>
             <h3>Limpeza interna</h3>
             <p>Limpeza completa, troca de pasta térmica e checagem de temperatura.</p>
         </article>
 
         <article class="service">
-            <div class="service__icon" aria-hidden="true">⚡</div>
-            <h3>Upgrade SSD/RAM</h3>
+            <div class="service__icon">
+                <i class="fa-solid fa-bolt"></i>
+            </div>
+            <h3>Upgrade</h3>
             <p>Mais desempenho e menos travamentos. Indico o melhor custo-benefício.</p>
         </article>
       </div>
 
-      <div class="cta-strip">
+      <div class="cta-strip cta-strip--whatsapp">
         <div>
             <h3>Quer um orçamento agora?</h3>
             <p class="muted">Me chama no WhatsApp e eu te respondo rapidinho.</p>
@@ -103,7 +110,7 @@
     </section>
 
     <!-- Como funciona -->
-    <section id="como-funciona" class="section section--alt">
+    <section id="como-funciona" class="section section--soft">
       <div class="container">
         <div class="section__head">
           <h2>Como funciona</h2>
@@ -114,33 +121,52 @@
           <div class="step">
             <div class="step__num">1</div>
             <h3>Você chama no WhatsApp</h3>
-            <p>Me conta o problema (ou o que quer melhorar) e eu faço algumas perguntas rápidas.</p>
+            <p>Me diga o modelo do PC/notebook e o que está acontecendo.</p>
           </div>
 
           <div class="step">
             <div class="step__num">2</div>
             <h3>Orçamento e prazo</h3>
-            <p>Eu passo o valor e o prazo antes de fazer qualquer coisa. Transparência total.</p>
+            <p>Eu avalio e informo valor e prazo antes de iniciar. Sem surpresas.</p>
           </div>
 
           <div class="step">
             <div class="step__num">3</div>
             <h3>Execução e entrega</h3>
-            <p>Serviço feito, testado e entregue com orientação básica para manter o PC em dia.</p>
+            <p>Serviço executado, testado e entregue com recomendações para manter o PC em dia.</p>
           </div>
         </div>
 
-        <div class="cta-strip">
-          <div>
-            <h3>Quer atendimento agora?</h3>
-            <p class="muted">Clique no botão e fale direto comigo no WhatsApp.</p>
-          </div>
-          <a class="btn btn--primary btn--lg" id="ctaStrip" href="#">Falar no WhatsApp</a>
-        </div>
-      </div>
-    </section>
+    <div class="cta-strip cta-strip--info">
+        <div>
+            <h3>Atendimento</h3>
 
-    <!-- Depoimentos -->
+            <div class="info-list">
+            <div class="info-item">
+                <i class="fa-solid fa-calendar-days" aria-hidden="true"></i>
+                <span><strong>Segunda a sexta:</strong> (horário a combinar)</span>
+            </div>
+
+            <div class="info-item">
+                <i class="fa-solid fa-house" aria-hidden="true"></i>
+                <span><strong>Retirada:</strong> a combinar (mediante agendamento)</span>
+            </div>
+
+            <div class="info-item">
+                <i class="fa-solid fa-truck-fast" aria-hidden="true"></i>
+                <span><strong>Entrega:</strong> a combinar (preferencialmente no meu endereço)</span>
+            </div>
+
+            <div class="info-item">
+                <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
+                <span><strong>Orçamento:</strong> sem compromisso</span>
+            </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Depoimentos "colocar quando tiver"
     <section class="section">
       <div class="container">
         <div class="section__head">
@@ -160,7 +186,7 @@
           </article>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- FAQ -->
     <section class="section section--alt">
