--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Albano Tech - Assistência técnica em Rio do Campo/SC. Formatação, limpeza e upgrade (SSD/RAM). Atendimento rápido via WhatsApp." />
+  <meta name="description" content="Albano Tech - Assistência técnica em Rio do Campo/SC. Formatação, limpeza e upgrade. Atendimento rápido via WhatsApp." />
+
   <script src="https://kit.fontawesome.com/7cd5b377e4.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
+
   <title>Albano Tech | Assistência Técnica</title>
 
-  <!-- CSS principal (importa base/layout/components/hero/responsive) -->
-  <link rel="stylesheet" href="assets/css/style.css"/>
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
@@ -17,7 +19,6 @@
   <header class="topbar">
     <div class="container topbar__content">
       <div class="brand">
-        
         <div class="brand__text">
           <img class="brand__wordmark" src="./assets/img/albano-tech-logo.png" alt="Albano Tech" />
         </div>
@@ -32,7 +33,7 @@
   </header>
 
   <main>
-    <!-- HERO (video/imagem) -->
+    <!-- HERO -->
     <section class="hero hero--media" id="inicio">
       <video class="hero__bg" autoplay muted loop playsinline preload="metadata" poster="assets/img/hero.jpg">
         <source src="./assets/video/hero.mp4" type="video/mp4" />
@@ -68,43 +69,43 @@
     <section id="servicos" class="section">
       <div class="container">
         <div class="section__head">
-        <h2>Serviços</h2>
-        <p class="muted">Os mais pedidos para deixar seu PC rápido, limpo e pronto para trabalhar.</p>
-      </div>
+          <h2>Serviços</h2>
+          <p class="muted">Os mais pedidos para deixar seu PC rápido, limpo e pronto para trabalhar.</p>
+        </div>
 
-      <div class="grid">
-        <article class="service service--featured">
+        <div class="grid">
+          <article class="service service--featured">
             <div class="service__icon">
-                <i class="fa-solid fa-align-center"></i>
+              <i class="fa-solid fa-align-center" aria-hidden="true"></i>
             </div>
             <h3>Formatação completa</h3>
             <p>Instalação do Windows + drivers + otimizações. Backup quando possível.</p>
             <span class="service__tag">Mais solicitado</span>
-        </article>
+          </article>
 
-        <article class="service">
+          <article class="service">
             <div class="service__icon">
-                <i class="fa-solid fa-broom"></i>
+              <i class="fa-solid fa-broom" aria-hidden="true"></i>
             </div>
             <h3>Limpeza interna</h3>
             <p>Limpeza completa, troca de pasta térmica e checagem de temperatura.</p>
-        </article>
+          </article>
 
-        <article class="service">
+          <article class="service">
             <div class="service__icon">
-                <i class="fa-solid fa-bolt"></i>
+              <i class="fa-solid fa-bolt" aria-hidden="true"></i>
             </div>
             <h3>Upgrade</h3>
             <p>Mais desempenho e menos travamentos. Indico o melhor custo-benefício.</p>
-        </article>
-      </div>
+          </article>
+        </div>
 
-      <div class="cta-strip cta-strip--whatsapp">
-        <div>
+        <div class="cta-strip cta-strip--whatsapp">
+          <div>
             <h3>Quer um orçamento agora?</h3>
             <p class="muted">Me chama no WhatsApp e eu te respondo rapidinho.</p>
-        </div>
-        <a class="btn btn--primary btn--lg" id="ctaServicos" href="#">Falar no WhatsApp</a>
+          </div>
+          <a class="btn btn--primary btn--lg" id="ctaServicos" href="#">Falar no WhatsApp</a>
         </div>
       </div>
     </section>
@@ -137,36 +138,37 @@
           </div>
         </div>
 
-    <div class="cta-strip cta-strip--info">
-        <div>
+        <div class="cta-strip cta-strip--info">
+          <div>
             <h3>Atendimento</h3>
 
             <div class="info-list">
-            <div class="info-item">
-                <i class="fa-solid fa-calendar-days" aria-hidden="true"></i>
+              <div class="info-item">
+                <i class="fa-regular fa-calendar-days" aria-hidden="true"></i>
                 <span><strong>Segunda a sexta:</strong> (horário a combinar)</span>
-            </div>
+              </div>
 
-            <div class="info-item">
-                <i class="fa-solid fa-house" aria-hidden="true"></i>
+              <div class="info-item">
+                <i class="fa-regular fa-house" aria-hidden="true"></i>
                 <span><strong>Retirada:</strong> a combinar (mediante agendamento)</span>
-            </div>
+              </div>
 
-            <div class="info-item">
+              <div class="info-item">
                 <i class="fa-solid fa-truck-fast" aria-hidden="true"></i>
                 <span><strong>Entrega:</strong> a combinar (preferencialmente no meu endereço)</span>
-            </div>
+              </div>
 
-            <div class="info-item">
-                <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
+              <div class="info-item">
+                <i class="fa-regular fa-circle-check" aria-hidden="true"></i>
                 <span><strong>Orçamento:</strong> sem compromisso</span>
+              </div>
             </div>
-            </div>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
 
-
-    <!-- Depoimentos "colocar quando tiver"
+    <!-- Depoimentos (colocar quando tiver)
     <section class="section">
       <div class="container">
         <div class="section__head">
@@ -186,10 +188,11 @@
           </article>
         </div>
       </div>
-    </section> -->
+    </section>
+    -->
 
     <!-- FAQ -->
-    <section class="section section--alt">
+    <section class="section">
       <div class="container">
         <div class="section__head">
           <h2>Perguntas frequentes</h2>
@@ -201,14 +204,22 @@
             <summary>Vocês atendem somente em Rio do Campo?</summary>
             <p>Atendimento principal em Rio do Campo/SC e região (quando possível). Me chama no WhatsApp e verificamos.</p>
           </details>
+
           <details>
             <summary>Quanto tempo leva uma formatação?</summary>
             <p>Depende do equipamento e do que precisa ser instalado, mas geralmente vai de algumas horas até 1 dia.</p>
           </details>
+
           <details>
             <summary>Vale a pena colocar SSD?</summary>
             <p>Na maioria dos casos, sim. SSD é o upgrade que mais dá resultado em velocidade e inicialização.</p>
           </details>
+
+          <details>
+            <summary>Meus arquivos ficam seguros?</summary>
+            <p>Sempre que possível faço backup e não acesso arquivos pessoais sem necessidade. Tudo com descrição.</p>
+          </details>
+
           <details>
             <summary>Tem garantia?</summary>
             <p>Sim, o serviço é feito com responsabilidade. A garantia varia conforme o tipo de serviço e peça.</p>
@@ -222,15 +233,14 @@
       <div class="container contact">
         <div class="contact__box">
           <h2>Contato</h2>
-          <p class="muted">
-            Atendimento via WhatsApp. Informe o modelo do PC/notebook e o problema.
-          </p>
+          <p class="muted">Atendimento via WhatsApp. Informe o modelo do PC/notebook e o problema.</p>
 
           <div class="contact__info">
             <div class="info">
               <span class="info__label">WhatsApp</span>
-              <span class="info__value">+55 47 98421-2803</span>
+              <a class="phone-link" href="#" id="ctaPhone">+55 47 98421-2803</a>
             </div>
+
             <div class="info">
               <span class="info__label">Cidade</span>
               <span class="info__value">Rio do Campo - SC</span>
@@ -251,11 +261,11 @@
 
   <footer class="footer">
     <div class="container footer__content">
-      <span>© <span id="year"></span> Albano Tech. Todos os direitos reservados.</span>
-      <span class="muted">Assistência Técnica • Rio do Campo/SC</span>
+      <span><i class="fa-regular fa-copyright" aria-hidden="true"></i> <span id="year"></span> Albano Tech. Todos os direitos reservados.</span>
     </div>
   </footer>
 
-  <script src="./js/script.js"></script>
+  <!-- JS (corrigido caminho) -->
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
