--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </div>
   </footer>
 
-  <!-- JS (corrigido caminho) -->
-  <script src="assets/js/script.js"></script>
+  <!-- JS -->
+  <script src="assets/js/script.js?v=2"></script>
 </body>
 </html>
