--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Albano Tech - Assistência técnica em Rio do Campo/SC. Formatação, limpeza e upgrade. Atendimento rápido via WhatsApp." />
 
   <script src="https://kit.fontawesome.com/7cd5b377e4.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
 
   <title>Albano Tech | Assistência Técnica</title>
 
@@ -20,7 +20,8 @@
     <div class="container topbar__content">
       <div class="brand">
         <div class="brand__text">
-          <img class="brand__wordmark" src="./assets/img/albano-tech-logo.png" alt="Albano Tech" />
+          <img class="brand__wordmark" src="./assets/img/albano-tech-icon.png" alt="Albano Tech" />
+          <img class="brand__wordmark" src="./assets/img/albano-tech-wordmark-clean.png" alt="Albano Tech" />
         </div>
       </div>
 
