--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container topbar__content">
       <div class="brand">
         <div class="brand__text">
-          <img class="brand__wordmark" src="./assets/img/albano-tech-icon.png" alt="Albano Tech" />
+          <img class="brand__icon" src="./assets/img/albano-tech-icon.png" alt="Albano Tech" />
           <img class="brand__wordmark" src="./assets/img/albano-tech-wordmark-clean.png" alt="Albano Tech" />
         </div>
       </div>
